--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Simple React + Socket.io app",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently -k \"node server.js\" \"npm --prefix ./socket-client start\"",
+    "start": "concurrently -k \"node server.js\"",
     "first": "echo Installing server packages... && npm install && cd socket-client && echo Installing client packages... && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
