--- a/socket-client/package.json
+++ b/socket-client/package.json
@@ -14,8 +14,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-toastify": "^3.4.2",
-    "reactstrap": "^5.0.0-beta.2",
-    "socket.io-client": "^4.8.1"
+    "reactstrap": "^5.0.0-beta.2"
   },
   "scripts": {
     "start": "react-scripts start",
